Fixed spacing inside scroll area

--- a/src/css/play.css
+++ b/src/css/play.css
@@ -41,6 +41,10 @@
     visibility: hidden;
 }
 
+#play main .scrollable {
+    padding: 15px;
+}
+
 @media (max-width: 1100px) {
     #play .first-slide {
         flex-basis: 40%;
