--- a/src/css/playInfo.css
+++ b/src/css/playInfo.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 15px;
+    flex-shrink: 0;
 }
 
 #playInfo main .next-turn {
