--- a/src/css/playTurn.css
+++ b/src/css/playTurn.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 15px;
+    flex-shrink: 0;
 }
 
 #playTurn main .turn-pair {
