--- a/src/css/preparationSettings.css
+++ b/src/css/preparationSettings.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-shrink: 0;
     align-items: center;
     margin-bottom: 5px;
 }
@@ -18,6 +19,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-shrink: 0;
     align-items: center;
     margin: 20px 10px;
 }
